--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
 
 
 </li>
-    <li>Nike Airforce 1 (White)<img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM (1).jpeg" height="500" alt="Sneakers Shoes Marketing while holdoing it">
+    <li>Nike Airforce 1 (White) <a href="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM (1).jpeg"><img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM (1).jpeg" height="500" alt="Sneakers Shoes Marketing while holdoing it"> </a> <a href="./My kicks/"></a>
 <h3>₦17,000 <a href="./Sneakers1.HTML">BUY</a></h3></li> 
 
-    <li>Nike Airforce 1 (Red)<img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM.jpeg" height="500" alt="">
+
+
+    <li>Nike Airforce 1 (Red)<a href="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM.jpeg"><img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.54 PM.jpeg" height="500" alt=""></a>
 <h3>₦17,000 <a href="./Sneakers1.HTML">BUY</a></h3></li>
 
-    <li>Dior Corperate wear (black)<img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM (1).jpeg" height="400">
+
+    <li>Dior Corperate wear (black) <a href="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM (1).jpeg"><img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM (1).jpeg" height="400"></a> 
 <h3>₦37,500 <a href="./Sneakers1.HTML">BUY</a></h3> </li>
 
 
-    <li>Billionaire Half-cover (brown)<img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM.jpeg" height="500" alt="">
+
+
+    <li>Billionaire Half-cover (brown) <a href="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM.jpeg"><img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.55 PM.jpeg" height="500" alt=""></a> 
 <h3>₦26,000 <a href="./Sneakers1.HTML">BUY</a></h3></li>
 
 
-    <li>Versace Half-cover (black)<img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.57 PM (1).jpeg" height="500" alt=""><h3>₦27,000 <a href="./Sneakers1.HTML">BUY</a></h3></li>
+    <li>Versace Half-cover (black) <a href="./My kicks/WhatsApp Image 2023-07-03 at 11.18.57 PM (1).jpeg"><img src="./My kicks/WhatsApp Image 2023-07-03 at 11.18.57 PM (1).jpeg" height="500" alt=""><h3>₦27,000 </a> <a href="./Sneakers1.HTML">BUY</a></h3></li>
 </ol>
 <hr>
 <a href="./about.html">ABOUT ME</a> 
